<resources>

    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>

    <string name="app_name">GE Vendor</string>
    <string name="add_item_button">Add Item</string>
    <string name="count_text_view">0</string>
    <string name="counting_toast_message">Counting...</string>
    <string name="about_heading_text">About GE</string>
    <string name="about_subheading_text">About Subheading</string>
    <string name="about_ge_text">Lorem ipsum dolor sit amet, consectetur <i>adipiscing</i> elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. \n\nwww.google.com \n\n
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
        Sed ut perspiciatis unde omnis iste natus error sit <b>voluptatem</b>
        accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab
        illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
        sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
        adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
        dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
        exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
        consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
    </string>
    <string name="item_description_placeholder">Item Description</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>


    <string-array name="items_titles">
        <item>Ginger Pao</item>
        <item>Pasta</item>
        <item>Pizza</item>
        <item>Potato Balls</item>
        <item>Cake</item>
    </string-array>


    <string-array name="labels_array">
        <item>Cheese</item>
        <item>Avocado</item>
        <item>Jalapeno</item>
        <item>Beef patty</item>
    </string-array>

    <array name="items_images">
        <item>@drawable/img_ginger_pao</item>
        <item>@drawable/img_pasta</item>
        <item>@drawable/img_pizza</item>
        <item>@drawable/img_potato_ball</item>
        <item>@drawable/img_yam_cake</item>
    </array>

    <string-array name="items_descriptions">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit </item>
        <item>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</item>
        <item>Ut enim ad minim veniam</item>
        <item>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</item>
        <item>FDuis aute irure dolor in reprehenderit in voluptate</item>
    </string-array>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
