<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/tv_about_heading"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="@dimen/regular_padding"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:text="@string/about_heading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_about_heading"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_about_subheading"
                android:padding="@dimen/regular_padding"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:text="@string/about_subheading_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tv_about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="12sp"
                android:padding="@dimen/regular_padding"
                android:text="@string/about_ge_text" />

        </LinearLayout>



    </ScrollView>


</RelativeLayout>